# nazokake-judge

./: .dev.vars.example  .gitignore  LICENSE  README.md  pyproject.toml  wrangler.toml
.github/workflows/: deploy.yml  smoke-test-deploy.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/: shared-infrastructure.md
aidlc-docs/operations/: dry-run-dev.md  manual-p-data.md  manual-p-eval.md  manual-p-rsch.md  runbook.md
backend/: entry.py  log.py
backend/admin/: __init__.py  api.py
backend/domain/: __init__.py  assignment.py  likert.py  pool_sufficiency.py  serializer.py
backend/participant/: api.py  errors.py  response.py  session.py  view.py
backend/repo/: __init__.py  _d1.py  repository.py
frontend/: app.js  index.html  styles.css
migrations/: 0001_init.sql  0002_item_body.sql  0003_likert_unique.sql  0004_item_retire.sql  0005_layer_anchor_plan.sql
plans/: README.md
plans/fallback/: composition.json  constraints.json
plans/primary/: composition.json  constraints.json  plan.json  plan.meta.json  practice.json  verification.md
schema/: __init__.py  models.py
scripts/: __init__.py  _bootstrap.py  _client.py  plan_ingest.py  pool_ingest.py  pool_retire.py  reset-all.sql  reset-responses.sql  token_issue.py
scripts/bt_aggregate/: __init__.py  __main__.py  aggregate.py  (+4 more)
smoke-test/: .gitignore  README.md  pylock.toml  pyproject.toml  result-local.json  result-prod.json  wrangler.toml
smoke-test/migrations/: 0001_smoke.sql
smoke-test/src/: entry.py
src/: entry.py
tests/: conftest.py  fakes.py
tests/integration/: .gitignore  README.md  drive_u2.py  drive_u3.py  drive_u4a.py  drive_u5.py  drive_u6.py  pylock.toml  pyproject.toml  result-integration.json  result-u2-integration.json  result-u3-integration.json  result-u4a-integration.json  result-u5-integration.json  result-u6-integration.json  wrangler.toml
tests/integration/src/: it_entry.py  worker.py
(+173 files in other folders)
